<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rotationX="-1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/second"
        tools:context=".ui.DetailActivity">

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:drawableStartCompat="@drawable/back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/ic_launcher_foreground"
                android:contentDescription="@string/gambar"
                tools:src="@tools:sample/avatars" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp">

                <Button
                    android:id="@+id/btnFavorite"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/favorite"
                    android:textColor="@android:color/white"
                    android:drawableLeft="@drawable/baseline_favorite_24"
                    android:layout_gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_extrabold"
                    android:textColor="@color/black"
                    tools:text="Judul"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btnFavorite"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:id="@+id/ownerName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/black"
                    tools:text="Owner Name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btnFavorite"
                    app:layout_constraintTop_toBottomOf="@id/name"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/waktu_mulai"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/beginTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/kuota"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/quota"
                    android:layout_width="78dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="Sisa Kuota"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/remaining_quota"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sisa Kuota: 50"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/registrant"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/registrant"
                    android:layout_width="78dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/category"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:padding="3dp"
                android:text="@string/description"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textColor="@color/black" />
        </LinearLayout>

        <Button
            android:id="@+id/filledButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center|bottom"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/daftar"
            app:backgroundTint="@color/primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.889"
            tools:layout_editor_absoluteX="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>