<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_header">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:paddingTop="40dp"
                android:layout_marginStart="25dp"
                android:text="@string/event_dicoding" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:text="@string/upcoming_events"
                android:layout_marginStart="25dp"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/horizontal_only"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:background="@drawable/horizontal_shape"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:orientation="vertical"
        android:background="@drawable/second_border_shape">
        <TextView
            android:layout_width="200dp"
            android:layout_height="25dp"
            android:text="@string/finished_events"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:background="@drawable/border_shape"
            android:textSize="15sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/vertical_only"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="90dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="20dp"/>
    </LinearLayout>

</FrameLayout>
